--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   max-width: 1200px;
   margin: auto;
-  padding: 1.5rem 1rem;
+  padding: 2rem 2rem;
 }
 
 .logo {
@@ -65,11 +65,10 @@ body {
 
 .hero-text p {
   color: #d1d5db;
-  margin-bottom: 1rem;
+  margin-bottom: 4rem;
 }
 
 .hire-btn {
-
   background-color: #2dd4bf;
   color: black;
   padding: 0.75rem 1.5rem;
@@ -86,11 +85,15 @@ body {
   width: 300px;
   border-radius: 50%;
 }
-
+#servicos {
+  max-width: 1200px;
+  margin: auto;
+  margin-top: 10rem;
+}
 .section-container {
   max-width: 1200px;
   margin: auto;
-  padding: 3rem 1rem;
+
 }
 
 .section-container h2 {
@@ -115,7 +118,7 @@ body {
   background-color: #2d2d2d;
   padding: 1rem;
   border-radius: 0.5rem;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .project-card h3 {
